migration updated, booking crud endpoints implemented

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       MYSQL_DATABASE: booking
       MYSQL_USER: booking
       MYSQL_PASSWORD: booking
+      TZ: Europe/Budapest
     ports:
       - "3306:3306"
     volumes:
