--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,13 @@ version: '3.1'
 
 services:
 
+  smtp:
+    image: monsieurbiz/mailcatcher
+    ports:
+      - '25:1025'
+      - '1080:1080'
+
+
   mysql:
     image: mysql
     # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
