--- a/api/package.json
+++ b/api/package.json
@@ -42,12 +42,15 @@
     "handlebars": "^4.7.7",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
+    "nest-winston": "^1.7.0",
     "nodemailer": "^6.7.7",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
