--- a/admin/package.json
+++ b/admin/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.8",
+    "@chakra-ui/react": "^2.2.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.10.0",
+    "framer-motion": "^6.5.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
